<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Gamepads -->
  <string name="gamepad_logitech_f310">Logitech F310 Gamepad</string>
  <string name="gamepad_microsoft_xbox_360">Microsoft XBox 360 Gamepad</string>
  <string name="gamepad_android_standard">Standard Android Gamepad</string>
  <string name="gamepad_default">@string/gamepad_logitech_f310</string>

  <!-- App Package Strings -->
  <string name="app_name">FTC Driver Station</string>
  <string name="about_activity">About</string>
  <string name="title_activity_settings">FTC Driver Station Settings</string>

  <!--  Actions -->
  <string name="action_settings">Settings</string>
  <string name="action_restart_robot">Restart Robot</string>
  <string name="action_exit_app">Exit</string>


  <!-- Preferences -->
  <string name="pref_gamepad_title">Gamepad</string>

  <string name="pref_gamepad_type_key">pref_gamepad_type</string>
  <string name="pref_gamepad_type_title">Gamepad type</string>
  <string-array name="pref_gamepad_type_entries">
    <item>@string/gamepad_logitech_f310</item>
    <item>@string/gamepad_microsoft_xbox_360</item>
    <item>@string/gamepad_android_standard</item>
  </string-array>

  <string name="pref_logging_title">Logging</string>
  <string name="pref_log_network_traffic_title">Log Network Traffic</string>
  <string name="pref_log_network_traffic_summary">Save network data to logs; this will generate a large volume of logs</string>
  <string name="pref_log_network_traffic_key">pref_log_network_traffic</string>

  <string name="pref_driver_station_mac">pref_driver_station_mac</string>
  <string name="pref_driver_station_mac_default">NONE</string>

  <string name="label_current_op_mode">current op mode:</string>
  <string name="label_queued_op_mode">queued:</string>
  <string name="label_loading_op_mode">Loading...</string>
  <string name="label_start">Start</string>
  <string name="label_start_timed">Start w/ Timer</string>
  <string name="label_select">Select</string>
  <string name="label_stop">Stop</string>

  <string name="dialog_title_select_op_mode">Select Op Mode</string>

  <!-- Wifi Direct Pairing -->
  <string name="wifi_direct_devices">Wifi Direct Devices:</string>
  <string name="wifi_direct_device_none">none - do not pair</string>
  <string name="pair_wifi_direct">Pair With Robot Controller</string>
  <string name="pair_wifi_direct_menu_item">Pair With Robot Controller</string>
  <string name="pair_instructions">        Make sure that the FTC Robot Controller app is open on your other device, and that both devices have wifi enabled</string>

  <!-- Fix Misconfigured Wifi Direct -->
  <string name="title_activity_config_wifi_direct">Configure Wifi Direct</string>
  <string name="wifi_direct_update_settings">
    Please wait while we update the Wifi Direct settings on this device.
  </string>

</resources>
