<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/action_settings"/>
  <item
    android:id="@+id/action_restart_robot"
    android:orderInCategory="101"
    android:showAsAction="never"
    android:title="@string/action_restart_robot"/>
  <item
    android:id="@+id/action_pair_wifi_direct"
    android:orderInCategory="102"
    android:showAsAction="never"
    android:title="@string/pair_wifi_direct_menu_item"/>
  <item
    android:id="@+id/action_about"
    android:orderInCategory="999"
    android:icon="@android:drawable/ic_menu_info_details"
    android:title="@string/about_activity"/>
  <item
    android:id="@+id/action_exit_app"
    android:orderInCategory="1000"
    android:icon="@android:drawable/ic_menu_info_details"
    android:title="@string/action_exit_app"/>

</menu>